<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeTitle"
        android:textSize="36sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.303"
        tools:visibility="invisible" />

    <ImageButton
        android:id="@+id/addEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/addBtnDesc"
        android:scaleX="1"
        android:scaleY="1"
        android:tint="@color/colorPrimary"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/baseline_add_circle_outline_black_18dp"
        tools:visibility="visible" />

    <ScrollView
        android:id="@+id/master"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="64dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <LinearLayout
            android:id="@+id/timetableList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:isScrollContainer="false"
            android:orientation="vertical"
            app:layout_constrainedHeight="true"
            app:layout_constrainedWidth="true">

            <TextView
                android:id="@+id/mondayTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Day1"
                android:textAlignment="center"
                android:textSize="24sp" />

            <LinearLayout
                android:id="@+id/mondayList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nothingBoxMo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/nothingBackground"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/nothingText"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    android:visibility="visible" />
            </LinearLayout>

            <TextView
                android:id="@+id/tuesdayTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/Day2"
                android:textAlignment="center"
                android:textSize="24sp" />

            <LinearLayout
                android:id="@+id/tuesdayList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nothingBoxTu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/nothingBackground"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/nothingText"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    android:visibility="visible" />
            </LinearLayout>

            <TextView
                android:id="@+id/WednesdayTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/Day3"
                android:textAlignment="center"
                android:textSize="24sp" />

            <LinearLayout
                android:id="@+id/wednesdayList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nothingBoxWe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/nothingBackground"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/nothingText"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    android:visibility="visible" />
            </LinearLayout>

            <TextView
                android:id="@+id/ThursdayTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/Day4"
                android:textAlignment="center"
                android:textSize="24sp" />

            <LinearLayout
                android:id="@+id/thursdayList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nothingBoxTh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/nothingBackground"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/nothingText"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    android:visibility="visible" />
            </LinearLayout>

            <TextView
                android:id="@+id/fridayTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/Day5"
                android:textAlignment="center"
                android:textSize="24sp" />

            <LinearLayout
                android:id="@+id/fridayList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nothingBoxFr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/nothingBackground"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/nothingText"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    android:visibility="visible" />
            </LinearLayout>

            <TextView
                android:id="@+id/saturdayTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/Day6"
                android:textAlignment="center"
                android:textSize="24sp" />

            <LinearLayout
                android:id="@+id/saturdayList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nothingBoxSa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/nothingBackground"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/weekendText"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    android:visibility="visible" />
            </LinearLayout>

            <TextView
                android:id="@+id/sundayTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/Day7"
                android:textAlignment="center"
                android:textSize="24sp" />

            <LinearLayout
                android:id="@+id/sundayList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nothingBoxSu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/nothingBackground"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/weekendText"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    android:visibility="visible" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/pref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/prefBtnDesc"
        android:scaleX="1"
        android:scaleY="1"
        android:tint="@color/colorPrimary"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/baseline_settings_black_18dp"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>