<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventAddition" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/eventTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:ems="15"
                    android:hint="@string/titleHint"
                    android:importantForAutofill="no"
                    android:inputType="textCapSentences"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="Autofill"
                    tools:targetApi="o" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/startLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/startText"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:maxWidth="31dp"
                    android:text="@string/calStart"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/enterDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorPrimary"
                    android:ems="5"
                    android:hint="@string/calHint"
                    android:importantForAutofill="no"
                    android:inputType="date"
                    tools:ignore="Autofill"
                    tools:targetApi="o" />

                <ImageButton
                    android:id="@+id/pickStartDate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/calBtnDesc"
                    android:scaleX="1"
                    android:scaleY="1"
                    android:tint="@color/colorPrimary"
                    app:srcCompat="@drawable/baseline_date_range_black_18dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/endLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/endText"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:maxWidth="31dp"
                    android:text="@string/calEnd"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/endDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorPrimary"
                    android:ems="5"
                    android:hint="@string/calHint"
                    android:importantForAutofill="no"
                    android:inputType="date"
                    tools:ignore="Autofill"
                    tools:targetApi="o" />

                <ImageButton
                    android:id="@+id/pickEndDate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/calBtnDesc"
                    android:scaleX="1"
                    android:scaleY="1"
                    android:tint="@color/colorPrimary"
                    app:srcCompat="@drawable/baseline_date_range_black_18dp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/timeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/timeText"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/timeStartEnd"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/startTime"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_weight="0"
                    android:background="?attr/editTextBackground"
                    android:backgroundTint="@color/colorPrimary"
                    android:maxLength="5"
                    android:text="@string/timeHint"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/toText"
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:maxWidth="5dp"
                    android:minWidth="5dp"
                    android:text="@string/dashText"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/endTime"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="128dp"
                    android:layout_weight="0"
                    android:background="?attr/editTextBackground"
                    android:backgroundTint="@color/colorPrimary"
                    android:maxLength="5"
                    android:text="@string/timeHint"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/campusLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/campusText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:maxWidth="31dp"
                    android:text="@string/campusSelect"
                    android:textAlignment="center" />

                <Spinner
                    android:id="@+id/campusSpin"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    android:entries="@array/campusEntries"
                    android:spinnerMode="dialog" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/locationLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/buildingSpin"
                    android:layout_width="230dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="5dp"
                    android:entries="@array/noCampus"
                    android:spinnerMode="dialog" />

                <EditText
                    android:id="@+id/enterRoom"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:width="180dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:ems="10"
                    android:hint="@string/roomHint"
                    android:importantForAutofill="no"
                    android:inputType="textCapSentences"
                    android:maxEms="5"
                    tools:ignore="Autofill"
                    tools:targetApi="o" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/catLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/catText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:maxWidth="31dp"
                    android:text="@string/catText"
                    android:textAlignment="center" />

                <Spinner
                    android:id="@+id/catSpin"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    android:entries="@array/catList"
                    android:spinnerMode="dialog" />

            </LinearLayout>

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:layout_weight="0.5"
                android:ems="10"
                android:gravity="start|top"
                android:hint="Add a Note..."
                android:inputType="textMultiLine"
                android:visibility="gone"
                tools:visibility="visible" />
        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/addBtnDesc"
        android:scaleX="1"
        android:scaleY="1"
        android:tint="@color/colorPrimary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/baseline_done_black_18dp"
        tools:visibility="visible" />

    <ImageButton
        android:id="@+id/finalEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/addBtnDesc"
        android:scaleX="1"
        android:scaleY="1"
        android:tint="@color/colorPrimary"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/baseline_add_circle_outline_black_18dp" />

    <ImageButton
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/delBtnDesc"
        android:scaleX="1"
        android:scaleY="1"
        android:tint="@color/colorPrimary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/save"
        app:srcCompat="@drawable/baseline_delete_black_18dp"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>